Closed
Bug 473871
Opened 17 years ago
Closed 17 years ago
assert about dangling contexts in nsStyleSet::EndReconstruct
Categories
(Core :: CSS Parsing and Computation, defect, P3)
Core
CSS Parsing and Computation
Tracking
()
VERIFIED
FIXED
mozilla1.9.1b3
People
(Reporter: dbaron, Assigned: dbaron)
References
Details
(Keywords: fixed1.9.0.7, fixed1.9.1)
Attachments
(1 file)
|
4.08 KB,
patch
|
bzbarsky
:
review+
bzbarsky
:
superreview+
dveditz
:
approval1.9.0.7+
|
Details | Diff | Splinter Review |
This is spun off of bug 468211.
I've debugged a few crashes recently that were the result of incomplete replacement of style contexts during rule tree reconstruction. That's very likely to lead to crashes due to dangling pointers.
I'm actually thinking about whether to try to handle this case by preserving the rule trees when this situation happens.
However, at the very least, we should have an NS_ABORT_IF_FALSE so we crash sooner and with more information.
Attachment #357278 -
Flags: superreview?(bzbarsky)
Attachment #357278 -
Flags: review?(bzbarsky)
Updated•17 years ago
|
Attachment #357278 -
Flags: superreview?(bzbarsky)
Attachment #357278 -
Flags: superreview+
Attachment #357278 -
Flags: review?(bzbarsky)
Attachment #357278 -
Flags: review+
| Assignee | ||
Comment 1•17 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Priority: -- → P3
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.2a1
Updated•17 years ago
|
Status: RESOLVED → VERIFIED
| Assignee | ||
Comment 2•17 years ago
|
||
http://hg.mozilla.org/releases/mozilla-1.9.1/rev/f9bd63b72fec since the patch to bug 475128 was completely on top of this patch, and it was blocking1.9.1+
| Assignee | ||
Updated•17 years ago
|
Attachment #357278 -
Flags: approval1.9.0.7?
Comment 3•17 years ago
|
||
Comment on attachment 357278 [details] [diff] [review]
patch
Approved for 1.9.0.7, a=dveditz for release-drivers.
Attachment #357278 -
Flags: approval1.9.0.7? → approval1.9.0.7+
| Assignee | ||
Comment 4•17 years ago
|
||
Commited to CVS trunk (for 1.9.0.* releases), 2009-02-02 20:16 -0800.
Keywords: fixed1.9.0.7
| Assignee | ||
Comment 5•17 years ago
|
||
NOTE to anybody doing 1.8.* backports: this patch does not apply to 1.8.* and is not relevant there since we did not do rule tree reconstructs back then; they were new in 1.9.*.
Flags: wanted1.8.1.x-
Comment 6•17 years ago
|
||
Is there any direct way to verify this fix for 1.9.0 or 1.9.1?
You need to log in
before you can comment on or make changes to this bug.
Description
•