Add assertions to EndReconstruct that all style contexts have been reresolved.  (Bug 473871)  r+sr=bzbarsky